added my stuff page and some other changes

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about me.html">About</a></li>
+                    <li><a href="mystuff.html">My Stuff</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
@@ -33,9 +34,6 @@
             </a>
             <a href="https://x.com/Shlok48171076" class="icon-link" title="X">
                 X
-            </a>
-            <a href="https://github.com/Shlokvenga" class="icon-link" title="github">
-                Github
             </a>
         </div>
         </section>
