--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about me.html">About</a></li>
+                    <li><a href="mystuff.html">My Stuff</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
