--- a/about me.html
+++ b/about me.html
@@ -14,6 +14,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about me.html" class="active">About</a></li>
+                    <li><a href="mystuff.html">My Stuff</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
