changed link to social

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <a href="https://www.instagram.com/shlok_vengurlekar/" class="icon-link" title="Instagram">
                 Instagram
             </a>
-            <a href="https://x.com/Shlok48171076" class="icon-link" title="X">
+            <a href="https://x.com/Shlokvenga" class="icon-link" title="X">
                 X
             </a>
         </div>
